feat(content-type): user is able to get content type by id
