# docs/swagger.json
@@ -185,7 +185,7 @@
                 }
             }
         },
-        "/contents/types": {
+        "/contents/:id/types": {
             "get": {
                 "security": [
                     {
@@ -200,7 +200,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "contents"
+                    "types"
                 ],
                 "summary": "get content type list",
                 "parameters": [
@@ -215,6 +215,48 @@
                         "description": "limit page",
                         "name": "limit",
                         "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ContentTypePaginate"
+                        }
+                    }
+                }
+            }
+        },
+        "/contents/:id/types/:type_id": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "get content type by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "types"
+                ],
+                "summary": "get content type by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "type_id",
+                        "name": "type_id",
+                        "in": "path"
                     }
                 ],
                 "responses": {
